# pypi_yolo_ext

./: pyproject.toml
src/yolo_ext/: __init__.py  custom_export.py  slice_class.py  static_qdq_quantization.py  truncate_classes.py
tests/: .gitignore  test_custom_export.py  test_slice_class.py  test_static_qdq_quantization.py  test_truncate_classes.py
